Add Bootstrap syling

--- a/views/main.erb
+++ b/views/main.erb
@@ -5,10 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Finatra</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="bootstrap.min.css">
 </head>
-<body>
-  <h1><a href="/">Finatra</a></h1>
+<body class="container">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Finatra</a>
+      </div>
+    </div>
+  </nav>
   <%= yield %>
 </body>
 </html>
