--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <h1>All the Fish!</h1>
 
 <table class="table table-striped">
-  <% @fishes.each_with_index do |fish, i| %>
+  <% @fishes.each_with_index do |fish, index| %>
   <tr>
     <td><%= index +1 %></td>
     <td><a href="/<%= fish.name %>"><%= fish.name.capitalize %></a></td>
