Add form and POST route

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,4 +8,21 @@
   </tr>
   <% end %>
 </table>
-
+<br/><br/>
+<h2>Add a new fish:</h2>
+<form method="post" action="/">
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" class="form-control" placeholder="Fish name">
+  </div>
+  <div class="form_group">
+    <label for="image_url">Image URL</label>
+    <input type="text" id="image_url" name="image_url" class="form-control" placeholder="Image URL of the fish">
+  </div>
+  <div class="form_group">
+    <label for="description">Description</label>
+    <textarea id="description" name="description" class="form-control" placeholder="Description of the fish"></textarea>
+  </div>
+  <br/>
+  <button type="submit" class="btn btn-primary">Add a new fish</button>
+</form>
